--- a/index.html
+++ b/index.html
@@ -79,3 +79,11 @@ console.log("Ola Mundo")
 
 	</body>
 </html>
+
+<script>
+    var titulo = document.querySelector("h1");
+    console.log(titulo);
+    console.log(titulo.textContent);
+
+    titulo.textContent = "Banana";
+</script>
